# simulations

./: Cargo.toml  README.md
scripts/: diverge.py
src/: main.rs  simulation.rs
src/simulation/: controller.rs  gravity.rs  particle.rs  sand.rs  softbody.rs
