[package]
name = "simulations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
rand = "0.8.4"
sdl2 = {version = "0.34.5", features = ["gfx"]}
rayon = "1.5.1"
lazy_static = "1.4.0"
